--- a/app/src/main/res/layout/fragment_gpsparent.xml
+++ b/app/src/main/res/layout/fragment_gpsparent.xml
@@ -2,14 +2,20 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#B2FF59"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context=".gpsparent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginBottom="30dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/toppagegpst">
+
+        </RelativeLayout>
+    </RelativeLayout>
 
 </FrameLayout>
