--- a/app/src/main/res/layout/fragment_gpsparent.xml
+++ b/app/src/main/res/layout/fragment_gpsparent.xml
@@ -11,11 +11,22 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="30dp">
         <RelativeLayout
+            android:id="@+id/mapstop"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@drawable/toppagegpst">
 
         </RelativeLayout>
+        <fragment
+            android:layout_below="@+id/mapstop"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:map="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/mappar"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="30dp"/>
     </RelativeLayout>
 
 </FrameLayout>
